Fix an issue where dropdown-menu had an extra space

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -130,6 +130,7 @@ nav.navbar-navy {
     .dropdown-menu {
         border-color: #395168;
         padding: 0;
+        background-clip: border-box;
         &, > .active > a {
             background-color: #44607b;
         }
